<resources>
    <string name="app_name">PayoV2</string>
    <string name="crear_base_de_datos">CREAR BASE DE DATOS</string>
    <string name="clientes">Clientes</string>
    <string name="ANTERIOR">ANTERIOR</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="FLECHA_ATRAS">FLECHA ATRAS</string>
    <string name="MAS">MAS</string>
    <string name="LUPA">LUPA</string>
    <string name="cobros_del_d_a2">Cobros del día</string>
    <string name="configuraci_n">Configuración</string>
    <string name="cuotas_atrasadas2">Cuotas Atrasadas</string>
    <string name="estad_sticas_generales">Estadísticas generales</string>
    <string name="pr_stamos_la_vaca">Préstamos la vaca</string>
    <string name="la_vaca_icon">LA VACA ICON</string>
    <string name="cobros_del_d_a">Cobros del día</string>
    <string name="cuotas_atrasadas">Cuotas atrasadas</string>
    <string name="nuevo_pr_stamo">Nuevo Préstamo</string>
    <string name="nuevo_cliente">Nuevo cliente</string>
    <string name="pr_stamos">Préstamos</string>
    <string name="sincronizaci_n">Sincronización</string>
    <string name="title_activity_nuevo_prestamo">NuevoPrestamoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="NombreCompleto">Nombre Completo</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="OK">OK</string>
    <string name="identificaci_n">Identificación</string>
    <string name="tel_fono">Teléfono</string>
    <string name="tel_fono_de_casa">Teléfono de casa</string>
    <string name="correo">Correo</string>
    <string name="direcci_n">Dirección</string>
    <string name="referencia">Referencia</string>
    <string name="Portrait">protrait</string>
    <string name="editar_cliente">Editar cliente</string>
    <string name="tel_fonos">Teléfono:</string>
    <string name="identificaci_ns">Identificación:</string>
    <string name="tel_fonoa">Teléfono:</string>
    <string name="tel_fono_de_casas">Teléfono de casa:</string>
    <string name="correos">Correo:</string>
    <string name="direcci_ns">Dirección:</string>
    <string name="nombre_completos">Nombre Completo:</string>
    <string name="tel_fonosa">Teléfono:</string>
    <string name="direcci_nsw">Dirección:</string>
    <string name="identificaci_na">Identificación:</string>
    <string name="nombre_completoq">Nombre Completo:</string>
    <string name="Correo">Correo</string>
    <string name="OKU">OK</string>
    <string name="Edit">Editar</string>
    <string name="aplicar_inter_s_moratorio">Aplicar interés moratorio</string>
    <string name="nombre_completoPrestamo">Nombre Completo</string>
    <string name="n_mero_de_pagos">Número de pagos</string>
    <string name="capital">Capital</string>
    <string name="direccion">Direccion</string>
    <string name="frecuencia_de_pago">Frecuencia de pago</string>
    <string name="fecha_de_inicio">Fecha de inicio</string>
    <string name="fecha_de_vencimiento">Fecha de vencimiento</string>
    <string name="valor_de_la_cuota">Valor de la cuota</string>
    <string name="calcular">Calcular</string>
    <string name="nuevo_pr_stamoC">Nuevo Préstamo</string>
    <string name="aplicar_inter_s_a">Aplicar interés a</string>
    <string name="inter_s_moratorio">Interés Moratorio</string>
    <string name="d_as_de_gracia">Días de gracia</string>
    <string name="total">Total</string>
    <string name="guardar">Guardar</string>
    <string name="inicio">INICIO</string>
    <string name="fin">FIN</string>
    <string name="actualizar_pr_stamo">Actualizar préstamo</string>
    <string name="detalles_del_pr_stamo">Detalles del préstamo</string>
    <string name="fecha">Fecha:</string>
    <string name="fecha_de_vencimientos">Fecha de vencimiento:</string>
    <string name="status">Status:</string>
    <string name="totals">Total:</string>
    <string name="n_mero_de_pagoss">Número de pagos:</string>
    <string name="ratio_de_inter_s">Ratio de interés:</string>
    <string name="pendiente">Pendiente</string>
    <string name="_0">0</string>
    <string name="_59000_00">$59000.00</string>
    <string name="_18_00">18.00%</string>
    <string name="_21_02_2024">21-02-2024</string>
    <string name="cuotas_pagadas">Cuotas pagadas:</string>
    <string name="_20">20</string>
    <string name="_30000_00">$30000.00</string>
    <string name="lady_dimitrescu">Lady Dimitrescu</string>
    <string name="balance">Balance:</string>
    <string name="_1">1</string>
    <string-array name="PaymentFrecuency">
        <item>Pago Diario</item>
        <item>Pago Semanal</item>
        <item>Pago Quincenal</item>
        <item>Pago Mensual</item>
        <item>Pago Único</item>
    </string-array>
    <string-array name="ApplyInterestTo">
        <item>Capital Inicial</item>
        <item>Cada Cuota</item>
    </string-array>

</resources>